# sens-fusion-2022

./: .gitignore  CMakeLists.txt  README.md  README.txt  analisys.ipynb  analysis.ipynb  compare_disparities.py  estimate_method.py  make.sh  mkrun.sh  params.cfg  run_naive.sh  run_stereo.sh  visualize_cloud.py
.ipynb_checkpoints/: analisys-checkpoint.ipynb
analysis/: analysis.py  compare_disparities.py  estimate_method.py  metrics.json  times.json
data/: config.json  load_all_data.sh
output/: comparison.txt
output/3d/: mesh.ply  pointcloud.ply  pointcoud.ply
src/: .main.cpp.swp  main.cpp  main.h
